--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
     "jsx": "react-jsx",
     "allowJs": true,
     "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "*":["./src/*"]
+    },
     //позволяет использовать обычне импорты вместо commonJs - (require() module.export)
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
