--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,21 @@
 {
-    "i18n-ally.localesPaths": [
-        "public/locales",
-        "src/shared/config/i18n"
-    ]
+  // ESLint настройки
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit"
+  },
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+
+  // Prettier настройки (без конфиг файла)
+  "editor.formatOnSave": false,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "prettier.semi": true,
+  "prettier.trailingComma": "all",
+  "prettier.singleQuote": true,
+  "prettier.printWidth": 100,
+  "prettier.tabWidth": 2,
+  "prettier.useTabs": false,
+
+  // Разрешить конфликт между ESLint и Prettier
+  "eslint.format.enable": false,
+  "i18n-ally.localesPaths": ["public/locales", "src/shared/config/i18n"]
 }
