--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "start": "webpack serve --env port=3000",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
-    "build": "webpack"
+    "build": "webpack",
+    "lint:ts":"eslint \"**/*.{ts,tsx}\"",
+    "lint:ts:fix":"eslint \"**/*.{ts,tsx}\" --fix",
+    "lint:scss":"npx stylelint \"**/*.scss\"",
+    "lint:scss:fix":"npx stylelint \"**/*.scss\" --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
