--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "build": "webpack",
-    "lint:ts":"eslint \"**/*.{ts,tsx}\"",
-    "lint:ts:fix":"eslint \"**/*.{ts,tsx}\" --fix",
-    "lint:scss":"npx stylelint \"**/*.scss\"",
-    "lint:scss:fix":"npx stylelint \"**/*.scss\" --fix"
+    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
+    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
+    "lint:scss": "npx stylelint \"**/*.scss\"",
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+    "jest:init": "jest --init",
+    "unit": "jest --config ./config/jest/jest.config.ts"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.22.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
