--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,10 +1,7 @@
 {
-    "extends": "stylelint-config-standard-scss",
-    "rules": {
-        "indentation": 4,
-        "no-empty-source":false,
-        "selector-class-pattern":null,
-        "comment-no-empty": true,
-    "no-invalid-double-slash-comments": true
-    }
+  "extends": "stylelint-config-standard-scss",
+  "rules": {
+    "indentation": [4],
+    "selector-class-pattern": null
+  }
 }
