--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,8 @@
     "compilerOptions": {
         "module": "commonjs",
     }
-  }
+  },
+  "include": [
+    "./config/jest/setupJest.ts"
+  ]
 }
