--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        node-version: [ 17.x ]
+        node-version: '18'
+        cashe:'npm'
 
     steps:
       - uses: actions/checkout@v2
