--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,9 @@
 
   // Разрешить конфликт между ESLint и Prettier
   "eslint.format.enable": false,
-  "i18n-ally.localesPaths": ["public/locales", "src/shared/config/i18n"]
+  "i18n-ally.localesPaths": [
+    "public/locales",
+    "src/shared/config/i18n"
+  ],
+  "i18n-ally.keystyle": "flat"
 }
