add cureency and country entities, add select, avatar components, profile, add router guards

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "allowJs": true,
     "moduleResolution": "node",
     "baseUrl": ".",
-    "strict": true,
+    // "strict": true,
     "paths": {
       "*":["./src/*"]
     },
