--- a/package.json
+++ b/package.json
@@ -100,8 +100,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@react-spring/web": "^9.5.2",
     "@reduxjs/toolkit": "^2.10.1",
     "@types/circular-dependency-plugin": "^5.0.8",
+    "@use-gesture/react": "^10.2.19",
     "axios": "^0.26.1",
     "circular-dependency-plugin": "^5.2.2",
     "i18next": "^21.10.0",
