--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,4 +1,4 @@
-# Browsers that we support
-
-defaults and fully supports es6-module
-maintained node versions
+> 0.5%
+last 2 versions
+not dead
+not ie 11
