--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "ulbi-learn",
   "version": "1.0.0",
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  },
   "description": "",
   "license": "ISC",
   "author": "",
@@ -25,9 +30,10 @@
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:json": "node scripts/generate-visual-json-report.js",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
-    "storybook": "start-storybook -p 6006 -c ./config/storybook",
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook",
-    "generate:slice": "node ./scripts/generateSlice/index.js"
+    "generate:slice": "node ./scripts/generateSlice/index.js",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -37,13 +43,15 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-interactions": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/builder-webpack5": "^6.4.19",
-    "@storybook/manager-webpack5": "^6.4.19",
-    "@storybook/react": "^6.4.19",
+    "@storybook/addon-actions": "7.6.20",
+    "@storybook/addon-docs": "^10.0.8",
+    "@storybook/addon-essentials": "^7.6.20",
+    "@storybook/addon-interactions": "7.6.20",
+    "@storybook/addon-links": "7.6.20",
+    "@storybook/builder-webpack5": "7.6.20",
+    "@storybook/components": "^7.6.20",
+    "@storybook/react": "7.6.20",
+    "@storybook/react-webpack5": "^7.6.20",
     "@storybook/testing-library": "^0.0.9",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -80,13 +88,16 @@
     "jest": "^29.7.0",
     "jest-html-reporters": "^3.1.7",
     "json-server": "^0.17.0",
-    "loki": "^0.31.1",
+    "loki": "^0.35.1",
     "mini-css-extract-plugin": "^2.5.3",
+    "msw": "^2.12.3",
+    "msw-storybook-addon": "^2.0.6",
     "react-refresh": "^0.12.0",
     "reg-cli": "^0.18.10",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "storybook": "^10.0.8",
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
