--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "jest:init": "jest --init",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
-    "test:ui": "loki test",
+    "test:ui": "loki test --host localhost --port 6006",
     "test:ui:update": "loki update",
     "test:ui:ok": "loki test approved",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
@@ -87,6 +87,7 @@
     "identity-obj-proxy": "^3.0.0",
     "install": "^0.13.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jest-html-reporters": "^3.1.7",
     "json-server": "^0.17.0",
     "loki": "^0.35.1",
