--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,15 @@ jobs:
       - name: build storybook
         if: always()
         run: npm run storybook:build
-      - name: screenshot testing
-        run: npm run test:ui:ci
-        if: always()
+      - name: Run visual tests
+  run: |
+    npm install -g http-server
+    
+    http-server storybook-static -p 6006 &
+    SERVER_PID=$!
+    
+    sleep 5
+    
+    npx loki test --requireReference --host localhost --port 6006
+    
+    kill $SERVER_PID
