--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,4 @@ jobs:
       - name: Run visual tests
         run: |
           npm install -g http-server
-          http-server storybook-static -p 6006 &
-          SERVER_PID=$!
-          sleep 5
-          npx loki test --requireReference --host localhost --port 6006
-          kill $SERVER_PID
+          npx concurrently "npx http-server storybook-static -p 6006" "npx loki test --requireReference --host localhost --port 6006"
