--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,6 @@ jobs:
       - name: build storybook
         if: always()
         run: npm run storybook:build
-      - name: Run visual tests
-        run: |
-          npm install -g http-server
-          npx concurrently "npx http-server storybook-static -p 6006" "npx loki test --requireReference --host localhost --port 6006"
+      - name: screenshot testing
+        run: npm run test:ui:ci
+        if: always()
