--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,11 +75,17 @@ jobs:
       - name: build storybook
         run: npm run storybook:build
         if: always()
+      - name: test unit
+        run: npm run test:unit
+        if: always()
       - name: screenshot testing
         run: npm run test:ui:ci
         if: always()
       - name: Generate HTML report
         run: npm run test:ui:report
+        if: always()
+      - name: move loki
+        run: mv .loki reports/
         if: always()
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -88,7 +94,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         if: always()
         with:
-          path: '.loki'
+          path: 'reports'
       - name: Deploy to GitHub Pages
         id: deployment
         if: always()
