--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:ui": "loki test --host localhost --port 6006",
     "test:ui:update": "loki update",
+    "test:e2e":"cypress open",
     "test:ui:ok": "loki test approved",
     "test:ui:ci": "loki --requireReference --reactUri file:./storybook-static",
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
@@ -73,9 +74,10 @@
     "babel-plugin-i18next-extract": "^0.8.3",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
+    "cypress": "^15.7.1",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-areuss-plugin": "^0.0.10",
+    "eslint-plugin-areuss-plugin": "^0.0.11",
     "eslint-plugin-i18next": "^5.1.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
